<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EFC4C4"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity">

   <ImageView
       android:id="@+id/imgLogo"
       android:layout_width="250dp"
       android:layout_height="250dp"
       android:layout_marginBottom="10dp"
       android:src="@drawable/logo" />

    <EditText
        android:id="@+id/Name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_name"
        android:layout_marginBottom="15dp" />

    <EditText
        android:id="@+id/Year"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:hint="@string/enter_year_e_g_1st_year"
        android:inputType="text"/>

    <TextView
        android:id="@+id/SubjectCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/select_number_of_subjects_1"
        android:textSize="18sp"
        android:textStyle="italic|bold"/>

    <SeekBar
        android:id="@+id/seekBarSubjects"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:max="15"
        android:progress="1"
        android:progressTint="#FD5858"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/select_semester"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <RadioGroup
        android:id="@+id/radioGroupSem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:orientation="vertical"
        android:gravity="center">

        <RadioButton
            android:id="@+id/radioSem1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/semester_1"
            app:buttonTint="#FD5858"
            android:textSize="18sp"/>

        <RadioButton
            android:id="@+id/radioSem2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/semester_2"
            app:buttonTint="#FD5858"
            android:textSize="18sp"/>
    </RadioGroup>

    <Button
        android:id="@+id/btnNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#FD5858"
        android:padding="10dp"
        android:textSize="18sp"
        android:text="@string/go_to_gpa_calculator"/>
</LinearLayout>